--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,100 +1,74 @@
-<div class="container pt-5">
+<div class="container pt-5" >
   
   <div class="row text-center">
     <div class="col-md-4">
       <div class="btn-group">
-        <div
-        class="btn btn-primary"
-        mwlCalendarPreviousView
-        [view]="view"
-        [(viewDate)]="viewDate"
-        (viewDateChange)="closeOpenMonthViewDay()"
-        >
-        Previous
+        <div class="btn btn-primary" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate">
+          <!-- (viewDateChange)="closeOpenMonthViewDay()" -->
+          Previous
+        </div>
+        <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">
+          Today
+        </div>
+        <div class="btn btn-primary" mwlCalendarNextView  [view]="view" [(viewDate)]="viewDate">
+          <!-- (viewDateChange)="closeOpenMonthViewDay()" -->
+          Next
+        </div>
       </div>
-      <div
-      class="btn btn-outline-secondary"
-      mwlCalendarToday
-      [(viewDate)]="viewDate"
-      >
-      Today
     </div>
-    <div
-    class="btn btn-primary"
-    mwlCalendarNextView
-    [view]="view"
-    [(viewDate)]="viewDate"
-    (viewDateChange)="closeOpenMonthViewDay()"
-    >
-    Next
-  </div>
-</div>
-</div>
-<div class="col-md-4">
-  <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
-</div>
-<div class="col-md-4">
-  <div class="btn-group">
-    <div
-    class="btn btn-primary"
-    (click)="setView(CalendarView.Month)"
-    [class.active]="view === CalendarView.Month"
-    >
-    Month
-  </div>
-  <div
-  class="btn btn-primary"
-  (click)="setView(CalendarView.Week)"
-  [class.active]="view === CalendarView.Week"
-  >
-  Week
-</div>
-</div>
-</div>
-</div>
-<br />
-<div [ngSwitch]="view">
-  <mwl-calendar-month-view
-  *ngSwitchCase="CalendarView.Month"
-  [viewDate]="viewDate"
-  [events]="events"
-  [refresh]="refresh"
-  (dayClicked)="changeDay($event.day.date)"
-  >
-</mwl-calendar-month-view>
-<mwl-calendar-week-view
-*ngSwitchCase="CalendarView.Week"
-[viewDate]="viewDate"
-[events]="events"
-[refresh]="refresh"
-(eventClicked)="handleEvent('Clicked', $event.event)"
->
-</mwl-calendar-week-view>
-</div>
-
-
-<ng-template #modalContent let-close="close">
-  <div class="modal-header">
-    <h5 class="modal-title">Event action occurred</h5>
-    <button type="button" class="close" (click)="close()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <div>
-      Action:
-      <pre>{{ modalData?.action }}</pre>
+    <div class="col-md-4">
+      <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'en' }}</h3>
     </div>
-    <div>
-      Event:
-      <pre>{{ modalData?.event | json }}</pre>
+    <div class="col-md-4">
+      <div class="btn-group">
+        <div class="btn btn-primary" (click)="setView(CalendarView.Month)" [class.active]="view === CalendarView.Month">
+          Month
+        </div>
+        <div class="btn btn-primary" (click)="setView(CalendarView.Week)" [class.active]="view === CalendarView.Week">
+          Week
+        </div>
+      </div>
     </div>
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="close()">
-      OK
-    </button>
+  <br />
+  
+  <div *ngIf="events.length"> <!--fix this -->
+    <div [ngSwitch]="view">
+      <mwl-calendar-month-view *ngSwitchCase="CalendarView.Month" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (dayClicked)="changeDay($event.day.date)">
+      </mwl-calendar-month-view>
+      <mwl-calendar-week-view *ngSwitchCase="CalendarView.Week" [viewDate]="viewDate" [events]="events" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)">
+      </mwl-calendar-week-view>
+    </div>
   </div>
-</ng-template>
-
+  
+  <ng-template #modalContent let-close="close">
+    <div class="modal-header">
+      <h5 class="modal-title">Event action occurred</h5>
+      <button type="button" class="close" (click)="close()">
+        <span aria-hidden="true">&times;</span>
+      </button>    
+    </div>
+    <div class="modal-body">
+      <div *ngIf="reservationResponse">
+        <ngb-alert [type]="responseType" [dismissible]="false">{{reservationResponse}}</ngb-alert>
+      </div>          
+      <div>
+        Action:
+        <pre>{{ modalData?.action }}</pre>
+      </div>
+      <div>
+        Event:
+        <pre>{{ modalData?.event | json }}</pre>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-secondary" (click)="makeReservation(modalData?.event)">
+        Reserve
+      </button>      
+      <button type="button" class="btn btn-outline-secondary" (click)="close()">
+        OK
+      </button>
+    </div>
+  </ng-template>
+  
 </div>
