--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,45 +3,24 @@
     <!-- <strong>{{auth.accessToken}}</strong> -->
     <!-- <strong>{{auth.userId}}</strong> -->
 
-    <pre *ngIf="auth.userProfile$ | async as profile">
-        <code>{{ profile | json }}</code>
-        </pre>    
+    <pre *ngIf="auth.isLoggedIn">
+        <code>{{ auth.userProfile | json }}</code>
+    </pre>
 
-    <!-- <div *ngIf="!auth.isAuthenticated()"> -->
-    <div>
+    <!-- <div *ngIf="auth.userId">
+        {{auth.userId}}
+    </div> -->
+
+    <div *ngIf="!auth.isLoggedIn">
+    <!-- <div> -->
         <p>Please login first to view or create new schedules</p>
         <button type="button" class="btn btn-primary btn-lg" (click)="auth.login()">Login in</button>
     </div>
-    <!-- <div *ngIf="auth.isAuthenticated()"> -->
-    <div>
-        <!-- <pre>{{ auth.userId }}</pre> -->
-        <button type="button" class="btn btn-primary btn-lg" (click)="add()">New</button>
-    </div>
-    
-    <!-- <div *ngIf="auth.isAuthenticated()"> -->
-    <div>
-        <table class="table table-striped table-hover pt-3" *ngIf="schedules != null">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <!-- <th scope="col">Title</th> -->
-                    <!-- <th scope="col">Category</th> -->
-                    <!-- <th scope="col">View Count</th> -->
-                    <th scope="col">Edit</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let schedule of schedules; index as i" >
-                    <th>{{schedule.name}}</th>
-                    <!-- <td>
-                        {{ blog.title.chinese }}
-                    </td>
-                    <td>{{ blog.category | translate}}</td>
-                    <td>{{ blog.viewCount | number }}</td> -->
-                    <td><a routerLink="/edit/{{schedule.id}}"><i class="fa fa-edit"></i></a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+
+    <div *ngIf="auth.isLoggedIn">
+        <!-- <div> -->
+            <button type="button" class="btn btn-primary btn-lg" (click)="auth.logout()">Logout</button>
+        </div>    
+
 </div>
 
