in progress. Fixed auth

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,6 +4,7 @@
     <!-- <pre>{{ auth.userId }}</pre> -->
     <div>
         <button type="button" class="btn btn-primary btn-lg" (click)="add()">New</button>
+        {{auth.userid}}
     </div>
     <!-- </div> -->
 
