--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -4,7 +4,7 @@
     <!-- <strong>{{auth.userId}}</strong> -->
 
     <div *ngIf="auth.isLoggedIn">
-        <p>{{ auth.userProfile | json }}</p>
+        <p>{{ auth.profile | json }}</p>
     </div>
 
     <!-- <div *ngIf="auth.userId">
