--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -78,7 +78,7 @@
           </div>
           <div class="form-group">
             <label for="guestComment">Your Comment</label>
-            <textarea class="form-control" id="guestComment" [(ngModel)]="guestComment" name="guestComment" rows="3"></textarea>
+            <textarea class="form-control" id="guestComment" [(ngModel)]="guestMessage" name="guestComment" rows="3"></textarea>
           </div>       
           <!-- <div class="form-group">
             <div class="form-check">
