--- a/src/app/edit-schedule/edit-schedule.component.html
+++ b/src/app/edit-schedule/edit-schedule.component.html
@@ -35,7 +35,13 @@
             <div class="col-sm-3">
               <input type="number" class="form-control" id="maxAllowedDaysFromNow" [(ngModel)]="schedule.maxAllowedDaysFromNow" name="maxAllowedDaysFromNow">
             </div>
-        </div>                      
+        </div> 
+        <div class="form-row">
+          <div class="col-md-6 mb-3">
+            <label for="guestEmail">Email Address. Please make sure your email address is correct</label>
+            <input type="email" class="form-control" id="guestEmail" [(ngModel)]="email" name="guestEmail" required>
+          </div>
+        </div>                          
 
         <button type="submit" class="btn btn-primary" (click)="save()">Save</button>
         <button type="submit" class="btn btn-secondary" (click)="back()">Close</button>
