--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -80,14 +80,14 @@
             <label for="guestComment">Your Comment</label>
             <textarea class="form-control" id="guestComment" [(ngModel)]="guestMessage" name="guestComment" rows="3"></textarea>
           </div>       
-          <!-- <div class="form-group">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="guestConsent" [(ngModel)]="modalData?.event.guestConsent" name="guestConsent" required>
-              <label class="form-check-label" for="guestConsent">
+          <div class="form-group">
+            <div class="custom-control custom-checkbox">
+              <input class="custom-control-input" type="checkbox" value="" id="guestConsent" [(ngModel)]="modalData?.event.guestConsent" name="guestConsent" required>
+              <label class="custom-control-label" for="guestConsent">
                 Agree to terms and conditions
               </label>
             </div>
-          </div> -->
+          </div>
         </form>        
       </div>  
     </div>
