--- a/src/app/edit-schedule/edit-schedule.component.html
+++ b/src/app/edit-schedule/edit-schedule.component.html
@@ -38,13 +38,16 @@
         </div> 
         <div class="form-row">
           <div class="col-md-6 mb-3">
-            <label for="guestEmail">Email Address. Please make sure your email address is correct</label>
+            <label for="guestEmail">Email Address. Please make sure your email address is correct. Confirmation emails will be sent to this email address</label>
             <input type="email" class="form-control" id="guestEmail" [(ngModel)]="email" name="guestEmail" required>
           </div>
         </div>                          
 
-        <button type="submit" class="btn btn-primary" (click)="save()">Save</button>
-        <button type="submit" class="btn btn-secondary" (click)="back()">Close</button>
+        <div>
+          <button type="submit" class="btn btn-primary" (click)="save()">Save</button>
+          <button class="btn btn-danger ml-2" (click)="delete()">Delete</button>
+          <button class="btn btn-secondary ml-2" (click)="back()">Close</button>
+        </div>
     </form>
 </div>
 
