--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -84,7 +84,7 @@
             <div class="custom-control custom-checkbox">
               <input class="custom-control-input" type="checkbox" value="" id="guestConsent" [(ngModel)]="modalData?.event.guestConsent" name="guestConsent" required>
               <label class="custom-control-label" for="guestConsent">
-                Agree to terms and conditions
+                Agree with terms and conditions
               </label>
             </div>
           </div>
