--- a/src/app/edit-schedule/edit-schedule.component.html
+++ b/src/app/edit-schedule/edit-schedule.component.html
@@ -1,39 +1,39 @@
 <div class="container pt-3" *ngIf="schedule != null">
     <ngb-alert *ngIf="submitMessage" type="success" >{{ submitMessage }}</ngb-alert>
-    <form>
+    <form (ngSubmit)="save()" #guestForm="ngForm">
         <div class="form-group">
             <label for="name">Name of This Schedule</label>
-            <input type="text" class="form-control" id="name" placeholder="Name of This Schedule" [(ngModel)]="schedule.name" name="name">
+            <input type="text" class="form-control" id="name" placeholder="Name of This Schedule" [(ngModel)]="schedule.name" name="name" required>
         </div>
 
         <div class="form-group row">
             <label for="openHour" class="col-sm-2 col-form-label">Open Hour</label>
             <div class="col-md-3">
-              <input type="time" class="form-control" id="openHour" placeholder="hh-mm" [(ngModel)]="schedule.openHour" name="openHour">
+              <input type="time" class="form-control" id="openHour" placeholder="hh-mm" [(ngModel)]="schedule.openHour" name="openHour" required>
             </div>
         </div>    
         <div class="form-group row">
             <label for="closeHour" class="col-sm-2 col-form-label">Close Hour</label>
             <div class="col-md-3">
-              <input type="time" class="form-control" id="closeHour" placeholder="hh-mm" [(ngModel)]="schedule.closeHour" name="closeHour">
+              <input type="time" class="form-control" id="closeHour" placeholder="hh-mm" [(ngModel)]="schedule.closeHour" name="closeHour" required>
             </div>
         </div>
         <div class="form-group row">
             <label for="eventInterval" class="col-sm-2 col-form-label">Event Interval in minutes</label>
             <div class="col-sm-3">
-              <input type="number" class="form-control" id="eventInterval" placeholder="hh-mm" [(ngModel)]="schedule.eventInterval" name="eventInterval">
+              <input type="number" class="form-control" id="eventInterval" placeholder="hh-mm" [(ngModel)]="schedule.eventInterval" name="eventInterval" required>
             </div>
         </div>          
         <div class="form-group row">
             <label for="availability" class="col-sm-2 col-form-label">Availability</label>
             <div class="col-sm-3">
-              <input type="number" class="form-control" id="availability" [(ngModel)]="schedule.availability" name="availability">
+              <input type="number" class="form-control" id="availability" [(ngModel)]="schedule.availability" name="availability" required>
             </div>
         </div>    
         <div class="form-group row">
             <label for="maxAllowedDaysFromNow" class="col-sm-2 col-form-label">Max Days From Now</label>
             <div class="col-sm-3">
-              <input type="number" class="form-control" id="maxAllowedDaysFromNow" [(ngModel)]="schedule.maxAllowedDaysFromNow" name="maxAllowedDaysFromNow">
+              <input type="number" class="form-control" id="maxAllowedDaysFromNow" [(ngModel)]="schedule.maxAllowedDaysFromNow" name="maxAllowedDaysFromNow" required>
             </div>
         </div> 
         <div class="form-row">
@@ -42,9 +42,16 @@
             <input type="email" class="form-control" id="guestEmail" [(ngModel)]="email" name="guestEmail" required>
           </div>
         </div>                          
-
-        <div>
-          <button type="submit" class="btn btn-primary" (click)="save()">Save</button>
+        <div class="form-group">
+          <div class="custom-control custom-checkbox">
+            <input class="custom-control-input" type="checkbox" value="" id="consent" [(ngModel)]="schedule.termsAndConditions" name="consent" required>
+            <label class="custom-control-label" for="consent">
+              Agree with terms and conditions
+            </label>
+          </div>
+        </div>
+        <div class="pt-3">
+          <button type="submit" class="btn btn-primary" [disabled]="!guestForm.form.valid" (click)="save()">Save</button>
           <button class="btn btn-danger ml-2" (click)="delete()">Delete</button>
           <button class="btn btn-secondary ml-2" (click)="back()">Close</button>
         </div>
